@startuml

title __TOKENIZER's Class Diagram__\n

  namespace com.example.procomsearch {
    namespace tokenizer {
      class com.example.procomsearch.tokenizer.Token {
          - _token : String
          + Token()
          + token()
          + type()
      }
    }
  }
  

  namespace com.example.procomsearch {
    namespace tokenizer {
      enum Type {
        AND
        ATTRIBUTE
        BIGGER
        DOU
        EQUAL
        LBRA
        NOT
        OR
        RBRA
        SMALLER
        UNKNOWN
      }
    }
  }
  

  namespace com.example.procomsearch {
    namespace tokenizer {
      class com.example.procomsearch.tokenizer.Tokenizer {
          - _buffer : String
          {static} - bracketMatchNum : int
          + Tokenizer()
          + checkBracketMatching()
          + current()
          + hasNext()
          + next()
      }
    }
  }
  

  com.example.procomsearch.tokenizer.Token o-- com.example.procomsearch.tokenizer.Token.Type : _type
  com.example.procomsearch.tokenizer.Token +-down- com.example.procomsearch.tokenizer.Token.Type
  com.example.procomsearch.tokenizer.Tokenizer o-- com.example.procomsearch.tokenizer.Token : currentToken


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
